[package]
name = "xilem_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
xilem = { git = "https://github.com/linebender/xilem", branch = "main" }
masonry = { git = "https://github.com/linebender/xilem", branch = "main" }
winit = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
chrono = "0.4"
log = "0.4"
anyhow = "1"
shared_structures = { git = "https://github.com/beamiter/shared_structures.git", features = ["use-futex"] }
xbar_core = { git = "https://github.com/beamiter/xbar_core.git" }
